# Android_ZPlayer_FFmpeg

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  zplayer.jks
app/src/androidTest/java/com/zhy/zplayer_ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg-lib.cpp
app/src/main/cpp/ffmpeg/: AVCodecAudioLocalthread.cpp  AVCodecAudioLocalthread.h  AVCodecVideoLocalthread.cpp  AVCodecVideoLocalthread.h  FFmpegPullStream.cpp  FFmpegPullStream.h  Utils.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/java/com/zhy/zplayer_ffmpeg/: MainActivity.kt
app/src/main/java/com/zhy/zplayer_ffmpeg/FFmpeg/: AVCodecCallBack.kt  AVCodecHandler.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v21/: styles.xml
app/src/test/java/com/zhy/zplayer_ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
